--- a/screen.css
+++ b/screen.css
@@ -69,14 +69,104 @@ label {
 footer {
   background: grey;
 }
-.tablerow {
-  display: none;
-  opacity: 0;
-}
-.tablerow.active {
-  display: table-row;
-  opacity: 1;
-}
+
+
 .iframeDownload {
   background: #CCC;
+}
+.bvf-filter {
+  list-style: none;
+  display: block;
+  padding: 0;
+  margin: 0;
+}
+.bvf-filter li {
+  border: 1px solid #CCC;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+.bvf-filter li input {
+  border: 0;
+  display: block;
+}
+.bvf-filter li label {
+  display: block;
+  font-weight: normal;
+  margin: 0;
+  position: relative;
+}
+.bvf-filter li label:after {
+  position: absolute;
+  content: "=";
+  right: 0;
+  top: 0;
+  color: #666;
+}
+.bvf-filter li label select {
+   display: block;
+   position: absolute;
+   z-index: 2;
+   opacity: 0;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 40px;
+   overflow: hidden;
+   cursor: pointer;
+}
+
+.bvf-files {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.bvf-files .tablerow {
+  padding: 0 10px;
+  margin-bottom: 10px;
+  border: 2px solid #ccc;
+  border-radius: 3px;
+  display: block;
+}
+
+.bvf-files .tablerow[data-visible="1"] {
+  opacity: 1;
+  display: block;
+}
+
+.bvf-files .tablerow[data-visible="0"] {
+  opacity: 0;
+  display: none;
+}
+
+.bvf-files .tablerow span {
+  text-align: left;
+  margin: 0;
+  display: inline-block;
+  width: 20%;
+  float: left;
+  padding: 10px 0;
+
+}
+.bvf-files .tablerow span.file {
+  text-align: right;
+  float: none;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 40%;
+}
+.bvf-files .tablerow span.file:after {
+  content: " ›";
+}
+@media screen and (max-width : 480px) {
+  .bvf-files .tablerow span {
+    width: 33%;
+  }
+  .bvf-files .tablerow span.file {
+      display: block;
+      width: 100%;
+      clear: left;
+      text-align: center;
+  }
 }
